# careerpilot-ai

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/database/: __init__.py  connection.py
backend/app/middleware/: __init__.py  rate_limit.py
backend/app/models/: job.py  project.py  resume.py
backend/app/routers/: analytics.py  ats.py  code_review.py  community.py  cover_letter.py  gamification.py  github_analyzer.py  hackathons.py  health.py  interview.py  jobs.py  linkedin.py  mentor.py  projects.py  resume.py  roadmap.py  stubs.py
backend/app/services/: __init__.py  ai_engine.py  cover_letter_service.py  github_service.py  interview_service.py  resume_service.py
backend/app/utils/: __init__.py  pdf_parser.py
backend/tests/: conftest.py  test_ats.py  test_github.py  test_health.py  test_resume.py
frontend/: .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: basic.test.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/components/ui/: badge.tsx  (+4 more)
frontend/src/hooks/: use-api.ts  use-debounce.ts  use-local-storage.ts
frontend/src/lib/: api.ts  constants.ts  utils.ts
frontend/src/types/: index.ts
(+33 files in other folders)
